# stock-price-prediction

./: .gitignore  LICENSE  README.md  README_kedro.md  app.py  pyproject.toml  requirements.txt
.github/workflows/: main.yml
conf/base/parameters/: data_preprocessing.yml
data/02_intermediate/: cleaned_train_data.csv
data/09_tracking/metrics.json/2023-08-04T15.05.32.963Z/: metrics.json
data/09_tracking/metrics.json/2023-08-06T13.00.19.166Z/: metrics.json
docs/source/: index.rst
mlruns/0/: meta.yaml
mlruns/259798642855049077/577fa02b75aa488fa4ae7c627457f8ae/: meta.yaml
notebooks/: lgm_pred.csv  note.ipynb  rf_pred.csv
src/: app.py  requirements.txt  setup.py
src/stock_price_prediction/: __init__.py  settings.py
stock-price-prediction/: Dockerfile  app.py  hooks.py  pyproject.toml
stock-price-prediction/.github/workflows/: main.yml
stock-price-prediction/conf/base/: catalog.yml  logging.yml  parameters.yml
stock-price-prediction/data/02_intermediate/: cleaned_new_data.csv
stock-price-prediction/data/06_models/: reg_model.pickle
stock-price-prediction/data/07_model_output/: predictions.csv
stock-price-prediction/docs/source/: conf.py
stock-price-prediction/mlruns/0/: meta.yaml
stock-price-prediction/mlruns/259798642855049077/: meta.yaml
stock-price-prediction/notebooks/: ensemble.csv  lr_pred.csv  note.ipynb  rf_pred.csv  xgb_pred.csv
stock-price-prediction/src/: requirements.txt
stock-price-prediction/src/stock_price_prediction/: __main__.py
stock-price-prediction/src/tests/: test_run.py
(+20 files in other folders)
