[tool.kedro]
package_name = "stock_price_prediction"
project_name = "stock-price-prediction"
kedro_init_version = "0.18.5"

[tool.isort]
profile = "black"

[tool.pytest.ini_options]
addopts = """
--cov-report term-missing \
--cov src/stock_price_prediction -ra"""

[tool.coverage.report]
fail_under = 0
show_missing = true
exclude_lines = ["pragma: no cover", "raise NotImplementedError"]

[tool.poetry.dependencies]
streamlit = "1.10.0"
seaborn = "0.11.2"
black~=22.0
xgboost==1.4.2
flake8>=3.7.9, <5.0
ipython>=7.31.1, <8.0; python_version < '3.10.9'
ipython~=8.10; python_version >= '3.10.9'
isort~=5.0
jupyter~=1.0
jupyterlab_server>=2.11.1, <2.16.0
jupyterlab~=3.0, <3.6.0
kedro~=0.18.5
kedro-telemetry~=0.2.0
nbstripout~=0.4
pytest-cov~=3.0
pytest-mock>=1.7.1, <2.0
pytest~=7.2
matplotlib~=3.4
ipywidgets>=7, <8
pandas>=1.2.0
numpy==1.21.2
pillow==8.4.0
future==0.18.2
gensim==4.1.2
joblib==1.1.0
numexpr==2.7.3
scikit-learn==0.24.2
scipy==1.7.3
psycopg2-binary==2.9.6
cached-path==1.1.2
altair==4.1.0
streamlit_folium==0.4.0
geopy==2.2.0
folium==0.12.1
streamlit_option_menu==0.1.0
gunicorn==20.1.0
Flask==2.1.0
